<resources>
    <string name="app_name">Kertec</string>
    <string name="title1">GENERA DOCUMENTOS</string>
    <string name="title2">GUARDALOS LOCALMENTE</string>
    <string name="title3">CONFIGURA TU PERFIL</string>
    <string name="desc1">Genera documentos en formato PDF de forma rapida y segura.</string>
    <string name="desc2">Tus ordenes se guardaran localmente</string>
    <string name="desc3">Una cuenta personalizada para tus actividades</string>
    <string name="btnEmpzar">EMPEZAR</string>
    <string name="tab1">Ordenes</string>
    <string name="tab2">Lecturas</string>
    <string name="loginTitle">Iniciar sesion</string>
    <string name="hintEmail">Correo Electronico</string>
    <string name="hintPassword">Contraseña</string>}
    <string name="registro">Registro</string>
    <string name="cuenta">CREAR CUENTA</string>

    <string name="btnInicio">INICIAR SESION</string>
    <string name="btnCerrar">CREAR CUENTA</string>
    <string name="btnPyp">Politica de privacidad</string>
    <string name="btnPassword">¿Olvidaste tu contraseña?</string>
    <string name="ordenTitle">Orden de servicio</string>
    <string name="hintCliente">Cliente</string>
    <string name="hintFecha">Fecha</string>
    <string name="hintDepartamento">Departamento</string>
    <string name="hintReportado">Servicio reportado</string>
    <string name="hintTrabajo">Trabajo Realizado</string>
    <string name="hintSerie">Serie</string>
    <string name="hintDireccion">Direccion</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintTelefono">Telefono</string>
    <string name="hintEquipo">Equipo</string>
    <string name="hintModelo">Modelo</string>
    <string name="hintMarca">Marca</string>
    <string name="fab_content_desc">nueva</string>

    <!--   Lecturas  -->
    <string name="lecturaTitulo">Toma de lectura</string>
    <string name="lecturaUbicacion">Ubicacion</string>
    <string name="lecturaCliente">Cliente</string>
    <string name="lecturaSerie">Serie</string>
    <string name="lecturaModelo">Modelo</string>
    <string name="lecturaMarca">Marca</string>
    <string name="lecturaInicial">Lectura Inicial</string>
    <string name="lecturaActual">Lectura Actual</string>
    <string name="lecturaCopias">Procesadas: </string>
    <string name="resultado">0</string>
    <string name="total">Total</string>

    // Errores
    <string name="error_email">Escribe un correo valido</string>
    <string name="error_orden">Debes de poner un nombre</string>
    <string name="error_password">Escrribe una contraseña mayor a 6 digitos</string>
    <string name="error_name">Escribe un nombre valido</string>
    <string name="menu">Cerrar sesion</string>
    <string name="content_description_menu">cerrar sesion</string>

    //Start menu
    <string name="titleBar">Bienvenido</string>
    <string name="reset">Reestablecer contraseña</string>
    <string name="enviar">ENVIAR</string>
</resources>